samples/_failures_safe/1761194260_e40c9e_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_ff2aafba.c: In function ‘main’:
./samples/SAFE/__tmp_ff2aafba.c:144:5: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ at end of input
  144 |     int entries_added
      |     ^~~
./samples/SAFE/__tmp_ff2aafba.c:144:5: error: expected declaration or statement at end of input
